Todod app completed

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                         <i class="fa-solid fa-trash delete-icon" title="Delete Todo"></i>
                     </div>
                 </div> -->
+                <!-- This is a copy of HTML creating through JS -->
             </div>
         </div>
 
